# onak

./: .bzrignore  .gitignore  .travis.yml  BUGS  CMakeLists.txt  Doxyfile  HISTORY  LICENSE  Makefile  Makefile.in  PERFORMANCE  README  README.md  THANKS  TODO  add-imp.pl  add.c  aged.c  aged.h  apache2  armor.c  armor.h  bithelp.h  build-config.h.in  charfuncs.c  charfuncs.h  cleankey.c  cleankey.h  cleanup.c  cleanup.h  config.h.in  configure.ac  decodekey.c  decodekey.h  getcgi.c  getcgi.h  gpgwww.c  hash-helper.c  hash-helper.h  hash.c  (+94 more)
.github/workflows/: build-test.yml
cgi/: CGI  CMakeLists.txt  add.c  getcgi.c  getcgi.h  gpgwww.c  hashquery.c  lookup.c
cmake/: FindBDB.cmake  FindGMP.cmake
debian/: NEWS  NEWS.Debian  README.Debian  TODO  changelog  control  copyright  docs  examples  onak.dirs  onak.init  onak.install  onak.logrotate  onak.maintscript  onak.service  onak.socket  onak.sysusers  postinst  postrm  prerm  rules  watch
debian/tests/: control  smoke-tests
doc/: HISTORY  README  THANKS  TODO  evil32.blacklist  mathopd.conf
doc/html_lookup/: index.html
doc/html_lookup/css/: milligram.min.css
gpgstats-0.0.2/: Makefile  dotrees.c  filt.pl  gpgpre  gpgprecolons  gpgstats.c  gpgstats.h  graphstuff.c  graphstuff.h  parse.c  parse.h  sig2dot.pl
keydb/: CMakeLists.txt  keyd.8  keyd.c  keyd.h  keydb.c  keydb_db4.c  keydb_dummy.c  keydb_dynamic.c  keydb_file.c  keydb_fs.c  keydb_hkp.c  keydb_keyd.c  keydb_keyring.c  keydb_pg.c  keydb_stacked.c  keydctl.8  keydctl.c  onak-keyd.8  onak-keydctl.8
keys/: README  autodns.key  blackcat.key  elgv3.key  huggie-rev.key  iwj.key  manysubkeys.key  manyuids.key  mjr.new  noodles-ecc.key  noodles.key  putro.key  swhite.key  v4.key  v5-test.key  v6-test.key
keys/x509/: pks-mail.2002.05.18.05.24.06.17245  pks-mail.2002.05.19.05.04.41.8604  pks-mail.2002.05.19.05.04.46.8629  pks-mail.2002.05.19.05.04.55.8642  pks-mail.2002.05.19.11.34.50.16078  pks-mail.2002.05.19.12.46.37.24380
m4/: ax_lib_nettle.m4
t/: all-010-del.t  all-020-get.t  all-025-get-v5.t  all-026-get-v6.t  all-030-get-fail.t  all-035-blacklist-test.t  all-036-update-only.t  all-037-check-sigs.t  all-038-cap-uids.t  all-038-dedupe-sigs.t  all-040-index-text.t  all-045-index-text-v5.t  all-046-index-64bit-dupe.t  all-047-index-text-v6.t  all-050-get-hash.t  all-060-get-fingerprint.t  all-065-get-fingerprint-v5.t  all-066-get-fingerprint-v6.t  all-070-get-short.t  all-080-get-subkey.t  all-085-get-subkey-v5.t  all-086-get-subkey-v6.t  all-090-get-subkey-short.t  all-095-get-subkey-fingerprint.t  all-100-cgi.t  all-100-maxpath.t  all-100-sixdegrees.t  all-990-aged-list.t  all-991-aged-dump.t  all-992-aged-clean.t  db4-000-add.t  dummy-000-add.t  file-000-add.t  file-010-del.t  fs-000-add.t  fs-010-del.t  test-in.conf  test-in.ini
